--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ html{
     height: 100vh;
     align-items: center;
 }
+
+.admin-nav-header{
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+}
