--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,20 @@ html{
     position: fixed;
     top: 0;
 }
+
+.calc-table {
+    max-height: calc(100vh - 120px - 120px);
+}
+
+.bg-img {
+    top: 0;
+    z-index: -10;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url(http://www.reactiongifs.us/wp-content/uploads/2015/04/nothing_to_see_here_naked_gun.gif) no-repeat center center fixed;
+    background-size: cover;
+    background-color: #000;
+    opacity: .5;
+    filter: alpha(opacity=50);
+}
